// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main query child note with schema 1`] = `
Object {
  "data": Array [
    Object {
      "body": "
",
      "children": Array [],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "foo.ch1",
      "id": "foo.ch1",
      "parent": "foo",
      "schema": Object {
        "moduleId": "foo",
        "schemaId": "ch1",
      },
      "title": "Ch1",
      "type": "note",
      "updated": "1",
    },
    Object {
      "body": "
",
      "children": Array [
        "foo.ch1",
      ],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "foo",
      "id": "foo",
      "parent": "root",
      "schema": Object {
        "moduleId": "foo",
        "schemaId": "foo",
      },
      "title": "Foo",
      "type": "note",
      "updated": "1",
    },
  ],
  "error": null,
}
`;

exports[`main query root note with schema 1`] = `
Object {
  "data": Array [
    Object {
      "body": "
",
      "children": Array [
        "foo.ch1",
      ],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "foo",
      "id": "foo",
      "parent": "root",
      "schema": Object {
        "moduleId": "foo",
        "schemaId": "foo",
      },
      "title": "Foo",
      "type": "note",
      "updated": "1",
    },
    Object {
      "body": "
",
      "children": Array [],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "foo.ch1",
      "id": "foo.ch1",
      "parent": "foo",
      "schema": Object {
        "moduleId": "foo",
        "schemaId": "ch1",
      },
      "title": "Ch1",
      "type": "note",
      "updated": "1",
    },
    Object {
      "body": "
",
      "children": Array [
        "foo",
      ],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "root",
      "id": "root",
      "parent": null,
      "title": "Root",
      "type": "note",
      "updated": "1",
    },
  ],
  "error": null,
}
`;

exports[`main query root: root note 1`] = `
Object {
  "data": Array [
    Object {
      "body": "
",
      "children": Array [
        "foo",
      ],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "root",
      "id": "root",
      "parent": null,
      "title": "Root",
      "type": "note",
      "updated": "1",
    },
  ],
  "error": null,
}
`;

exports[`main query root: root schema  1`] = `
Object {
  "data": Array [
    Object {
      "children": Array [],
      "id": "root",
      "parent": "root",
      "title": "root",
    },
  ],
  "error": null,
}
`;

exports[`main write 1`] = `
Object {
  "data": undefined,
  "error": [StatusCodeError: 500 - "Internal Server Error"],
}
`;

exports[`schema write simple schema 1`] = `
Object {
  "data": Object {
    "notes": Object {
      "foo": Object {
        "body": "
",
        "children": Array [
          "foo.ch1",
        ],
        "created": "1",
        "custom": Object {},
        "data": Object {},
        "desc": "",
        "fname": "foo",
        "id": "foo",
        "parent": "root",
        "schema": Object {
          "moduleId": "foo",
          "schemaId": "foo",
        },
        "title": "Foo",
        "type": "note",
        "updated": "1",
      },
      "foo.ch1": Object {
        "body": "
",
        "children": Array [],
        "created": "1",
        "custom": Object {},
        "data": Object {},
        "desc": "",
        "fname": "foo.ch1",
        "id": "foo.ch1",
        "parent": "foo",
        "schema": Object {
          "moduleId": "foo",
          "schemaId": "ch1",
        },
        "title": "Ch1",
        "type": "note",
        "updated": "1",
      },
      "root": Object {
        "body": "
",
        "children": Array [
          "foo",
        ],
        "created": "1",
        "custom": Object {},
        "data": Object {},
        "desc": "",
        "fname": "root",
        "id": "root",
        "parent": null,
        "title": "Root",
        "type": "note",
        "updated": "1",
      },
    },
    "schemas": Object {
      "foo": Object {
        "fname": "foo",
        "imports": Array [],
        "root": Object {
          "children": Array [
            "ch1",
          ],
          "id": "foo",
          "parent": "root",
          "title": "foo",
        },
        "schemas": Object {
          "ch1": Object {
            "body": "",
            "children": Array [],
            "created": 1602005445421,
            "data": Object {},
            "desc": "",
            "fname": null,
            "id": "ch1",
            "parent": "foo",
            "title": "ch1",
            "type": "schema",
            "updated": 1602005445421,
          },
          "foo": Object {
            "body": "",
            "children": Array [
              "ch1",
            ],
            "created": 1602005445421,
            "data": Object {},
            "desc": "",
            "fname": null,
            "id": "foo",
            "parent": "root",
            "title": "foo",
            "type": "schema",
            "updated": 1602005445421,
          },
        },
        "version": 1,
      },
      "root": Object {
        "fname": "root",
        "imports": Array [],
        "root": Object {
          "children": Array [],
          "id": "root",
          "parent": "root",
          "title": "root",
        },
        "schemas": Object {
          "root": Object {
            "body": "",
            "children": Array [],
            "created": 1602005445421,
            "data": Object {},
            "desc": "",
            "fname": null,
            "id": "root",
            "parent": "root",
            "title": "root",
            "type": "schema",
            "updated": 1602005445421,
          },
        },
        "version": 1,
      },
    },
  },
  "error": null,
}
`;

exports[`schema write simple schema 2`] = `
Object {
  "fname": "pro",
  "imports": Array [],
  "root": Object {
    "children": Array [],
    "id": "pro",
    "parent": "root",
    "title": "pro",
  },
  "schemas": Object {
    "pro": Object {
      "body": "",
      "children": Array [],
      "created": 1601938011262,
      "data": Object {},
      "desc": "",
      "fname": null,
      "id": "pro",
      "parent": "root",
      "title": "pro",
      "type": "schema",
      "updated": 1601938011262,
    },
  },
  "version": 1,
}
`;
